teamcity/debug/logging.yml
apiVersion: v1
kind: Pod
metadata:
  name: basicpod
  labels:
    type: webserver
spec:
  volumes:
    - name: teamcity-server-pv-storage
      persistentVolumeClaim:
        claimName: teamcity-server-pv-claim
  containers:
  - name: teamcity-server
    image: jetbrains/teamcity-server:latest
    ports:
    - containerPort: 80
    volumeMounts:
      - mountPath: "/var/log/nginx/"
        name: teamcity-server-pv-storage
  - name: fdlogger
    image: fluent/fluentd
    volumeMounts:
      - mountPath: "/var/log"
        name: teamcity-server-pv-storage
